# C-ITS-Inspector

./: .coverage  .gitignore  CHANGELOG.md  README.md  README_DE.md  pyproject.toml  test_report.txt  1
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: ROADMAP.md  eta_analysis.md  pcap_merge.md  prioritization_analysis.md  ui_map_layers.md
pcap2kml_player/: README.md  __init__.py  app_memory.py  asn1_schemas.py  data_model.py  kml_exporter.py  main.py  map_backend.py  map_widget.py  merge_model.py  native_map_widget.py  nmea_parser.py  parsing_worker.py  pcap_parser.py  player_controller.py  prioritization_exporter.py  qt_runtime.py  scene_model.py  security_parser.py  xml_map_parser.py
pcap2kml_player/assets/cache/: CAM_54416a630b1e270d.pkl  MAPEM_2973886ab9e64de5.pkl  SPATEM_af59f57f4cc045ff.pkl  SREM_3500b0eb2324e4e4.pkl
pcap2kml_player/ui/: __init__.py  eta_graph_widget.py  main_window.py
scripts/: generate_ui_docs.py  run_ci.ps1
testfiles/: SREM with OCIT.pcap  rxa_22082025.pcap  txa_22082025.pcap
testfiles/2024-04-24_LB72_RSU_PCAP/10.12_srem_oev_(noCancellation)/: rsu_rxa.pcap  rsu_txa.pcap  vector.blf
testfiles/2024-04-24_LB72_RSU_PCAP/10.21_srem_oev/: rsu_rxa.pcap  rsu_txa.pcap  vector.blf
testfiles/2024-04-24_LB72_RSU_PCAP/10.28_srem_oev/: rsu_rxa.pcap  rsu_txa.pcap  vector.blf
testfiles/2024-04-24_LB72_RSU_PCAP/11.23_srem_fw_(pkw)/: rsu_rxa.pcap  rsu_txa.pcap  vector.blf
tests/: TESTING_STRATEGY.md  TEST_REPORT.md  conftest.py  conftest_pcap.py  factories.py  requirements-test.txt  test_app_memory.py  test_data_model.py  test_eta_graph_widget.py  test_integration_txa_rxa_merge.py  test_kml_exporter.py  test_launcher.py  test_main_entry.py  test_main_window.py  test_map_backend.py  test_map_widget.py  test_merge_model.py  test_native_map_widget.py  test_nmea_parser.py  test_pcap_parser.py  test_pcap_parser_extras.py  test_perf_parsing.py  test_player_controller.py  test_prioritization_exporter.py  test_property_pcap_parser.py  test_qt_runtime.py  test_scene_model.py  test_security_parser.py  test_security_parser_unit.py  test_xml_map_parser.py
