[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcap2kml-player"
version = "1.7.0"
description = "Desktop-App zur Analyse, Wiedergabe und Kartendarstellung von V2X-Nachrichten aus PCAP-Dateien"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4.0",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pcap2kml_player*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long — handled by ruff format
    "N802",  # lower-case function names (Qt overrides)
    "N803",  # lower-case argument names (Qt arguments)
    "N818",  # Exception naming (ParseCancelled)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:simplekml.*",
]

[tool.coverage.run]
branch = true
source = ["pcap2kml_player"]
omit = [
    "pcap2kml_player/main.py",
    "pcap2kml_player/ui/*",
    "pcap2kml_player/map_widget.py",
    "pcap2kml_player/native_map_widget.py",
]

[tool.coverage.report]
precision = 1
skip_covered = false
show_missing = true
exclude_also = [
    "pragma: no cover",
]
